make window really large to avoid double scroll bars

--- a/src/django/giraffe/analyze/static/css/analyze.css
+++ b/src/django/giraffe/analyze/static/css/analyze.css
@@ -14,9 +14,9 @@ svg path { cursor:pointer; }
 .giraffe-main td { vertical-align:top; }
 /* We want -viewer and -tabs to line up, and -seq-viewer should be
  * contained within -viewer */
-.giraffe-viewer { height:570px; overflow:auto; }
-.giraffe-seq-viewer { height:530px; overflow:auto; }
-.giraffe-tabs { height:570px; overflow:auto; }
+.giraffe-viewer { height:3000px; overflow:auto; }
+.giraffe-seq-viewer { height:2900px; overflow:auto; }
+.giraffe-tabs { height:3000px; overflow:auto; }
 
 /* Generic */
 .giraffe-clear { clear:both; margin:15px; }
@@ -47,7 +47,7 @@ svg path { cursor:pointer; }
 .giraffe-seq-textarea {
     border:1px solid #e0e0e0;
     width:100%;
-    height:600px;
+    height:2500px;
     font-family:courier !important;
     font-size:12px;
 }
